--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "rm -rf dist && rollup -c",
     "publish": "npm run build && npm test",
-    "test": "mocha --require @babel/register"
+    "test": "jest"
   },
   "keywords": [
     "vue",
@@ -28,17 +28,19 @@
     "@babel/plugin-proposal-class-properties": "7.0.0-beta.42",
     "@babel/plugin-proposal-decorators": "7.0.0-beta.42",
     "@babel/preset-env": "7.0.0-beta.42",
-    "@babel/register": "7.0.0-beta.42",
+    "@vue/test-utils": "1.0.0-beta.13",
+    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "8.2.2",
-    "chai": "4.1.2",
+    "babel-jest": "22.4.3",
     "eslint": "4.19.1",
     "eslint-config-th0r": "1.0.1",
-    "karma": "2.0.0",
-    "karma-mocha": "1.3.0",
-    "mocha": "5.0.5",
+    "jest": "22.4.3",
+    "jest-serializer-vue": "1.0.0",
     "rollup": "0.57.1",
     "rollup-plugin-babel": "4.0.0-beta.0",
-    "vue": "^2.5.16"
+    "vue": "^2.5.16",
+    "vue-server-renderer": "2.5.16",
+    "vue-template-compiler": "2.5.16"
   },
   "files": [
     "dist/*.*"
