--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "module": "./dist/vue-model-x.esm.js",
   "scripts": {
     "build": "rm -rf dist && rollup -c",
-    "publish": "npm run build && npm test",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test",
     "test": "jest"
   },
   "keywords": [
