--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   "presets": [
     ["@babel/preset-env", {
-      "modules": false,
+      "modules": "commonjs",
       "useBuiltIns": false,
       "loose": true,
       "forceAllTransforms": true
