--- a/.babelrc
+++ b/.babelrc
@@ -17,7 +17,7 @@
         }]
       ],
       "plugins": [
-        ["@babel/plugin-proposal-decorators", {"legacy": true}],
+        "@babel/plugin-proposal-decorators",
         ["@babel/plugin-proposal-class-properties", {"loose": true}]
       ]
     }
