--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "vue-model-x",
-  "version": "0.6.1",
+  "version": "0.7.0",
   "description": "MobX-like state management library for Vue.js",
-  "main": "./lib/index.js",
-  "module": "./esm/index.js",
+  "main": "./dist/node/index.js",
+  "browser": "./dist/compat/index.js",
+  "esnext": "./dist/esnext/index.js",
+  "engines": {
+    "node": ">= 8"
+  },
   "scripts": {
-    "build": "npm run build:cjs && npm run build:esm",
-    "build:cjs": "babel --config-file ./babel.config.js --delete-dir-on-start -d lib -- src",
-    "build:esm": "babel --config-file ./babel.config.esm.js --delete-dir-on-start -d esm -- src",
+    "build": "npm run build:node && npm run build:compat && npm run build:esnext",
+    "build:node": "babel --config-file ./babel.config.node.js --delete-dir-on-start -d dist/node -- src",
+    "build:compat": "babel --config-file ./babel.config.compat.js --delete-dir-on-start -d dist/compat -- src",
+    "build:esnext": "babel --config-file ./babel.config.esnext.js --delete-dir-on-start -d dist/esnext -- src",
     "prepublishOnly": "npm run build && npm test",
     "test": "jest"
   },
@@ -23,27 +28,26 @@
   "author": "th0r",
   "license": "ISC",
   "peerDependencies": {
-    "vue": "^2.5.16"
+    "vue": ">= 2.5"
   },
   "devDependencies": {
     "@babel/cli": "7.2.3",
     "@babel/core": "7.2.2",
-    "@babel/plugin-proposal-class-properties": "7.2.3",
-    "@babel/plugin-proposal-decorators": "7.2.3",
-    "@babel/preset-env": "7.2.3",
-    "@vue/test-utils": "1.0.0-beta.27",
+    "@babel/plugin-proposal-class-properties": "7.3.0",
+    "@babel/plugin-proposal-decorators": "7.3.0",
+    "@babel/preset-env": "7.3.1",
+    "@vue/test-utils": "1.0.0-beta.28",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
-    "babel-jest": "23.6.0",
+    "babel-jest": "24.0.0",
     "eslint": "4.19.1",
     "eslint-config-th0r": "1.0.1",
-    "jest": "23.6.0",
-    "vue": "^2.5.21",
-    "vue-template-compiler": "2.5.21"
+    "jest": "24.0.0",
+    "vue": ">= 2.5",
+    "vue-template-compiler": ">= 2.5"
   },
   "files": [
-    "src/*.*",
-    "lib/*.*",
-    "esm/*.*"
+    "src/**",
+    "dist/**"
   ]
 }
